# employees-bot

./: .env  Dockerfile_bot  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: __init__.py  scheduler.py  user_checker.py
domain/: __init__.py  employee_service.py  models.py
infrastructure/: __init__.py  config.py  create_bot.py  logger.py
service/: __init__.py  db_manager.py  fix_shortcomings.py  handlers.py
